Warning fixes Round 2 - Compile: OK
- SecurityConfiguration: constructor injection for jwtToUserConverter, keyUtils; passwordEncoder as @Bean method param (S6813, S3305); removed @Autowired import
- PostController: unnamed catch patterns _ for unused exceptions (S7467)
- TextImageServiceImpl: .toList() + IllegalStateException (S6204, S112)
- PostImageServiceImpl: IllegalStateException in catch/rethrow (S112)
- TagServiceImpl: .toList() for getPostsSummaryByTagName (S6204)
- AllEndpointsJsonIntegrationTest: removed unused description param, merged nested ifs (S1172, S1066)
- CommentControllerTest: restored missing updateDTO variable (compile fix)
- CommentModerationIntegrationTest: removed commented-out verify() blocks and TODO comments (S125, S1135)